infra/keycloak/http-route.yml

kind:       HTTPRoute
apiVersion: gateway.networking.k8s.io/v1

metadata:
  name:      keycloak
  namespace: authentication

spec:
  parentRefs:
    - name:        traefik-gateway
      namespace:   traefik
      sectionName: web

  hostnames:
    - keycloak.localhost

  rules:
    - backendRefs:
        - name: keycloak
          port: 8080
    # PORT USED
    # http: 8080
    # https: 8443
    # management: 9000
